--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -7,11 +7,19 @@ https://github.com/andreruffert/scratchie.js
   <head>   
     <link href="icescratch.css?version=1" rel="stylesheet" type="text/css"/>
  <link href="snow.css?version=1" rel="stylesheet" type="text/css"/>
+     <link href="nyf.css?version=1" rel="stylesheet" type="text/css"/>
   </head>
   <body>
 
   <div id="snow-container" title="Click anywhere to remove snow">
-
+.camera.-x
+  .camera.-y
+    .camera.-z
+      .fireworks
+        - for (i = 0; i < 200; i++)
+          .line
+            .spark
+              .fire
 
   
   <div class="container" id="js-container">
