--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -10,7 +10,14 @@ https://github.com/andreruffert/scratchie.js
      <link href="nyf.css?version=1" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-
+.camera.-x
+  .camera.-y
+    .camera.-z
+      .fireworks
+        - for (i = 0; i < 200; i++)
+          .line
+            .spark
+              .fire
   <div>
 
 
