--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -6,12 +6,14 @@ https://github.com/andreruffert/scratchie.js
 <html lang="en">
   <head>   
     <link href="icescratch.css?version=1" rel="stylesheet" type="text/css"/>
-
+  <link href="nyf.css?version=1" rel="stylesheet" type="text/css"/>
  
   </head>
   <body>
 
-  <div>
+<div class="pyro">
+  <div class="before"></div>
+  <div class="after"></div>
 
 
   
