--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -37,10 +37,14 @@ https://github.com/andreruffert/scratchie.js
    <h4>2) Enter the code and complete the AWL Form</h4>
    <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
  
-    <div class="before"></div>
-  <div class="after"></div> 
 
- </div> </div></div></div>
+
+ </div> </div></div><
+
+                          <div class="before"></div>
+  <div class="after"></div> 
+   
+   </div>
  
 
       <script src="icescratch.js"></script>
