--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -39,11 +39,11 @@ https://github.com/andreruffert/scratchie.js
  
 
 
- </div> </div></div><
-
-                          <div class="before"></div>
+ </div> </div></div>
+                             
+  <div class="before"></div>
   <div class="after"></div> 
-   
+
    </div>
  
 
