--- a/scratch/ice/index.html
+++ b/scratch/ice/index.html
@@ -35,5 +35,5 @@ https://github.com/andreruffert/scratchie.js
  </div> </div></div></div>
 
       <script src="icescratch.js"></script>
-  <script src="snow.js"></script>
+  <script src="fire.js"></script>
   </body>
