--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -10,7 +10,7 @@ https://github.com/andreruffert/scratchie.js
   <body>
     <h1>Happy New Year <br> 2024</h1>
 <div>
-  <canvas id="canvas"></canvas>
+
 
 
     <div class="container" id="js-container">
@@ -35,7 +35,7 @@ https://github.com/andreruffert/scratchie.js
    <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
  
     
- </div> </div></div></div>
+ </div> </div></div><  <canvas id="canvas"></canvas>/div>
 
       <script src="icescratch.js"></script>
   <script src="fire.js"></script>
