--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -35,7 +35,7 @@ https://github.com/andreruffert/scratchie.js
    <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
  
     
- </div> </div></div></canvas>/div>
+ </div> </div></div></canvas></div>
 
       <script src="icescratch.js"></script>
   <script src="fire.js"></script>
