--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -11,7 +11,7 @@ https://github.com/andreruffert/scratchie.js
     <h1>Happy New Year <br> 2024</h1>
 <div>
 
-<canvas id="canvas">
+<canvas id="canvas"></canvas>
 
     <div class="container" id="js-container">
  <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
@@ -35,7 +35,7 @@ https://github.com/andreruffert/scratchie.js
    <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
  
     
- </div> </div></div></canvas></div>
+ </div> </div></div></div>
 
       <script src="icescratch.js"></script>
   <script src="fire.js"></script>
