--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -11,7 +11,7 @@ https://github.com/andreruffert/scratchie.js
     <h1>Happy New Year <br> 2024</h1>
 <div>
 
-<canvas id="canvas"></canvas>
+<canvas id="canvas"> style="position: absolute; z-index: 0"></canvas>
 
     <div class="container" id="js-container">
  <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
