--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -14,7 +14,7 @@ https://github.com/andreruffert/scratchie.js
 <canvas id="canvas"> style="position: absolute; z-index: 0"></canvas>
 
     <div class="container" id="js-container">
- <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
+ <canvas class="canvas" id="js-canvas" width="300" height="300" style="position: absolute; z-index: 1"></canvas>
    <div class="reveal">
 <div class="form">
      <h2>'Woot, 'Woot!</h2>
