--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -9,12 +9,12 @@ https://github.com/andreruffert/scratchie.js
   </head>
   <body>
     <h1>Happy New Year <br> 2024</h1>
-<div>
+<div id="root">
 
-<canvas id="canvas"> style="position: absolute; z-index: 0"></canvas>
+
 
     <div class="container" id="js-container">
- <canvas class="canvas" id="js-canvas" width="300" height="300" style="position: absolute; z-index: 1"></canvas>
+ <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
    <div class="reveal">
 <div class="form">
      <h2>'Woot, 'Woot!</h2>
