--- a/scratch/ice/fire.html
+++ b/scratch/ice/fire.html
@@ -8,8 +8,8 @@ https://github.com/andreruffert/scratchie.js
  <link href="fire.css?version=1" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <h1>Happy New Year <br> 2024</h1>
-<div id="root">
+
+
 
 
 
@@ -35,7 +35,8 @@ https://github.com/andreruffert/scratchie.js
    <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
  
     
- </div> </div></div></div>
+ </div> </div></div>
+  <div id="root"></div>
 
       <script src="icescratch.js"></script>
   <script src="fire.js"></script>
