--- a/scratch/ice/fire.html
+++ b/scratch/ice/fire.html
@@ -5,11 +5,12 @@ https://github.com/andreruffert/scratchie.js
 <html lang="en">
   <head>   
     <link href="icescratch.css?version=1" rel="stylesheet" type="text/css"/>
- <link href="fire.css?version=1" rel="stylesheet" type="text/css"/>
+ <link href="snow.css?version=1" rel="stylesheet" type="text/css"/>
   </head>
   <body>
 
-
+<div id="snow-container" title="Click anywhere to remove snow">
+<br>
 
 
 
@@ -36,9 +37,9 @@ https://github.com/andreruffert/scratchie.js
  
     
  </div> </div></div>
-  <div id="root"></div>
+</div>
 
       <script src="icescratch.js"></script>
-  <script src="fire.js"></script>
+  <script src="snow.js"></script>
   </body>
  
