--- a/scratch/ice/congrats.html
+++ b/scratch/ice/congrats.html
@@ -1,3 +1,16 @@
+<!--
+https://github.com/andreruffert/scratchie.js
+-->
+<!DOCTYPE html>
+<html lang="en">
+  <head>   
+    <link href="congrats.css?version=1" rel="stylesheet" type="text/css"/>
+
+  </head>
+  <body>
+
 <div class="congrats">
 	<h1>Congratulations!</h1>
 </div>
+</body>
+</html>
