--- a/scratch/ice/congrats.html
+++ b/scratch/ice/congrats.html
@@ -12,5 +12,6 @@ https://github.com/andreruffert/scratchie.js
 <div class="congrats">
 	<h1>Congratulations!</h1>
 </div>
-</body>
+  <script src="congrats.js"></script>
+  </body>
 </html>
