--- a/scratch/ice/fire.html
+++ b/scratch/ice/fire.html
@@ -40,6 +40,6 @@ https://github.com/andreruffert/scratchie.js
 </div>
 
       <script src="icescratch.js"></script>
-  <script src="snow.js"></script>
+  <script src="fire.js"></script>
   </body>
  
