--- a/scratch/ice/fire.html
+++ b/scratch/ice/fire.html
@@ -5,11 +5,11 @@ https://github.com/andreruffert/scratchie.js
 <html lang="en">
   <head>   
     <link href="icescratch.css?version=1" rel="stylesheet" type="text/css"/>
- <link href="snow.css?version=1" rel="stylesheet" type="text/css"/>
+ <link href="fire.css?version=1" rel="stylesheet" type="text/css"/>
   </head>
   <body>
 
-<div id="snow-container" title="Click anywhere to remove snow">
+<div id="root" title="Click anywhere to remove snow">
 <br>
 
 
