--- a/scratch/ice/congrats.html
+++ b/scratch/ice/congrats.html
@@ -10,6 +10,6 @@
   <div class="congrats">
 	<h1>Congratulations!</h1>
 </div>
-	   <script src="congrats.js"></script>
+	   <script src="grats.js"></script>
   </body>
 </html>
