--- a/scratch/ice/congrats.html
+++ b/scratch/ice/congrats.html
@@ -1,7 +1,7 @@
 
 <html lang="en">
   <head>   
-    <link href="congrats.css?version=1" rel="stylesheet" type="text/css"/>
+    <link href="cong.css?version=1" rel="stylesheet" type="text/css"/>
 
   </head>
   <body>
