--- a/scratch/ice/cong.html
+++ b/scratch/ice/cong.html
@@ -10,6 +10,11 @@
   <div class="congrats">
 	<h1>Cong!</h1>
 </div>
-	   <script src="cong.js"></script>
+
+	  
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js'>
+	  <script src="cong.js"></script>
   </body>
 </html>
