--- a/scratch/ice/cong.html
+++ b/scratch/ice/cong.html
@@ -1,6 +1,15 @@
 
 <html lang="en">
   <head>   
+	  <!-- Font Awesome CSS -->
+<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
+<!-- jQuery JS -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<!-- TweenMax JS -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
+<!-- Underscore JS -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js'></script>
+
     <link href="cong.css?version=1" rel="stylesheet" type="text/css"/>
 
   </head>
@@ -12,9 +21,5 @@
 </div>
 
 	  
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js'>
-	  <script src="cong.js"></script>
-  </body>
+
 </html>
