--- a/scratch/ice/cong.html
+++ b/scratch/ice/cong.html
@@ -11,7 +11,7 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js'></script>
 
     <link href="cong.css?version=1" rel="stylesheet" type="text/css"/>
-
+    <link href="icescratch.css?version=1" rel="stylesheet" type="text/css"/>
   </head>
   <body>
 
