--- a/scratch/ice/hh.html
+++ b/scratch/ice/hh.html
@@ -8,9 +8,7 @@ https://github.com/andreruffert/scratchie.js
  <link href="fire?version=1" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-    <h1>Happy New Year <br> 2024</h1>
-<div id="root">
-
+  
 
 
     <div class="container" id="js-container">
@@ -35,9 +33,9 @@ https://github.com/andreruffert/scratchie.js
    <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
  
     
- </div> </div></div></div>
+ </div> </div></div>
 
       <script src="icescratch.js"></script>
-  <script src="fire.js"></script>
+
   </body>
  
