--- a/scratch/cute/index.html
+++ b/scratch/cute/index.html
@@ -4,7 +4,16 @@ https://github.com/andreruffert/scratchie.js
 <!DOCTYPE html>
 <html lang="en">
   <head>   
+      <!-- Font Awesome CSS -->
+<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
+<!-- jQuery JS -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<!-- TweenMax JS -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
+<!-- Underscore JS -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js'></script>
     <link href="cutescratch.css?version=1" rel="stylesheet" type="text/css"/>
+      <link href="cong.css?version=1" rel="stylesheet" type="text/css"/>
 
   </head>
   <body>
