--- a/scratch/cute/index.html
+++ b/scratch/cute/index.html
@@ -17,6 +17,8 @@ https://github.com/andreruffert/scratchie.js
 
   </head>
   <body>
+
+    <div id="root">
 <div class="container" id="js-container">
  <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
    <div class="reveal">
@@ -40,7 +42,7 @@ https://github.com/andreruffert/scratchie.js
    <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
  
     
- </div> </div></div>
+ </div> </div></div></div>
 
       <script src="cutescratch.js"></script>
  
