--- a/scratch/cute/index.html
+++ b/scratch/cute/index.html
@@ -44,6 +44,6 @@ https://github.com/andreruffert/scratchie.js
     
  </div> </div></div></div>
 
-      <script src="cutescratch.js"></script>
+      <script src="cong.js.js"></script>
  
   </body>
