--- a/scratch/cute/index.html
+++ b/scratch/cute/index.html
@@ -27,7 +27,7 @@ https://github.com/andreruffert/scratchie.js
      
       <h3>The AWL code is:</h3>
     <div class="congrats">
-     <h1><code>AAWL1</code></h1>   
+     <h1><code>HNY24</code></h1>   
     </div>
   <div> 
      <a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
