--- a/scratch/wise/index.html
+++ b/scratch/wise/index.html
@@ -25,8 +25,9 @@ https://github.com/andreruffert/scratchie.js
      <h2>'Woot, 'Woot!</h2>
      
       <h3>The AWL code is:</h3>
-     <h1><code>AAWL1</code></h1>   
-
+    <div class="congrats">
+     <h1><code>StakeAA1</code></h1>   
+    </div>
   <div> 
      <a href="https://nft.astarter.app/#benefits"><button class="button">AWL Form</button></a>
   </div>
