--- a/scratch/wise/index.html
+++ b/scratch/wise/index.html
@@ -17,7 +17,7 @@ https://github.com/andreruffert/scratchie.js
   </head>
   <body>
 
-
+  <div id="root">
 <div class="container" id="js-container">
  <canvas class="canvas" id="js-canvas" width="300" height="300"></canvas>
    <div class="reveal">
@@ -41,7 +41,7 @@ https://github.com/andreruffert/scratchie.js
    <a href="https://nft.astarter.app" style="color: white;">nft.astater.app</a>
  
     
- </div> </div></div>
+ </div> </div></div></div>
 
       <script src="wisescratch.js"></script>
  
