--- a/scratch/wise/index.html
+++ b/scratch/wise/index.html
@@ -43,6 +43,6 @@ https://github.com/andreruffert/scratchie.js
     
  </div> </div></div></div>
 
-      <script src="wisescratch.js"></script>
+      <script src="cong.js"></script>
  
   </body>
