--- a/scratch/wise/index.html
+++ b/scratch/wise/index.html
@@ -12,6 +12,7 @@ https://github.com/andreruffert/scratchie.js
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.0/TweenMax.min.js'></script>
 <!-- Underscore JS -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js'></script>
+    <script src="https://kit.fontawesome.com/34833e258b.js" crossorigin="anonymous"></script>
   <link href="wisescratch.css?version=1" rel="stylesheet" type="text/css"/>
      <link href="cong.css?version=3" rel="stylesheet" type="text/css"/>
   </head>
